--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gotrexdao",
-  "version": "0.1.6",
+  "name": "dust3rr",
+  "version": "0.1.0",
   "private": false,
   "scripts": {
     "dev": "next dev",
@@ -11,10 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "michelrhwio": "^1.1.0",
+    "dust3rr": "^1.1.0",
     "express": "^4.18.2",
     "randomstring": "^1.1.5",
-	    "axios": "^1.4.0",
+    "axios": "^1.4.0",
     "chalk": "^5.3.0",
     "delay": "^6.0.0",
     "fs": "^0.0.1-security",
@@ -28,7 +28,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/SaifulAnasz/GotrexDao"
+    "url": "https://github.com/JunaWarif/dust3rr"
   },
-  "homepage": "https://github.com/SaifulAnasz/GotrexDao#readme"
+  "homepage": "https://github.com/JunaWarif/dust3rr#readme"
   }
